[package]
name = "mtkview"
version = "0.1.2"
edition = "2024"

[dependencies]
binaryninja = {git = "https://github.com/Vector35/binaryninja-api.git", branch = "stable_5.3"}
#binaryninja = { path = "../binaryninja-api/rust" }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
base64 = "0.22.1"

[lib]
crate-type = ["cdylib"]